restructure app layout

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,15 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
 
-  <script type="text/javascript" src="./app.js"></script>
-  <script type="text/javascript" src="./app.routes.js"></script>
-  <script type="text/javascript" src="./home/home-container.js"></script>
-  <script type="text/javascript" src="./home/home-component.js"></script>
-  <script type="text/javascript" src="./projects/project-details-container.js"></script>
-  <script type="text/javascript" src="./projects/project-details-component.js"></script>
-  <script type="text/javascript" src="./projects/models/project-factory.js"></script>
-  <script type="text/javascript" src="./projects/models/project-resource.js"></script>
+  <script type="text/javascript" src="/app.js"></script>
+  <script type="text/javascript" src="/app.routes.js"></script>
+  <script type="text/javascript" src="/home/containers/home.container.js"></script>
+  <script type="text/javascript" src="/projects/containers/project-details.container.js"></script>
+  <script type="text/javascript" src="/projects/project/project.component.js"></script>
+  <script type="text/javascript" src="/projects/project-list/project-list.component.js"></script>
+  <script type="text/javascript" src="/projects/project-form/project-form.component.js"></script>
+  <script type="text/javascript" src="/projects/models/project.factory.js"></script>
+  <script type="text/javascript" src="/projects/models/project.resource.js"></script>
 
   <body ng-app="project-test">
     <div ng-view></div>
