--- a/public/projects/project/project.html
+++ b/public/projects/project/project.html
@@ -1,7 +1,6 @@
-<div class="container">
+<div>
   <div class="jumbotron">
     <h1>{{ctrl.project.name}}</h1>
-    <a href="/#/">Back to Home</a>
   </div>
   <h3>Project Data:</h3>
   <div>
