--- a/public/home/containers/home.html
+++ b/public/home/containers/home.html
@@ -1,5 +1,5 @@
 <div class="container" >
-  <div class="jumbotron">
+  <div class="jumbotron" style="text-align: center">
     <h1>Projects</h1>
   </div>
 
