--- a/public/projects/project-list/project-list.html
+++ b/public/projects/project-list/project-list.html
@@ -1,7 +1,9 @@
 <div>
   <table class="table table-bordered table-condensed">
     <tr ng-repeat="project in ctrl.projects">
-      <th><a href="/#/project/{{project.id}}">{{project.name}}</a></th>
+      <th style="text-align: center">{{project.name}}</th>
+      <th style="text-align: center"><a href="/#/project/{{project.id}}">View</a></th>
+      <th style="text-align: center"><a href="/#/project/edit/{{project.id}}">Edit</a></th>
     </tr>
   </table>
 </div>
