add navbar component

--- a/public/home/containers/home.html
+++ b/public/home/containers/home.html
@@ -1,8 +1,5 @@
-<div class="container" >
-  <div class="jumbotron" style="text-align: center">
-    <h1>Projects</h1>
-  </div>
-
+<div class="container">
+  <navbar nav-title="'Projects'" links="container.links"></navbar>
   <project-list projects="container.projects"></project-list>
   <project-form project="container.newProject" save="container.saveNewProject()"></project-form>
 </div>
