--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="/app.js"></script>
   <script type="text/javascript" src="/app.routes.js"></script>
   <script type="text/javascript" src="/home/containers/home.container.js"></script>
+  <script type="text/javascript" src="/home/navbar/navbar.component.js"></script>
   <script type="text/javascript" src="/projects/containers/project-view.container.js"></script>
   <script type="text/javascript" src="/projects/project-details/project-details.component.js"></script>
   <script type="text/javascript" src="/projects/project-list/project-list.component.js"></script>
