--- a/public/projects/containers/project-view.html
+++ b/public/projects/containers/project-view.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <a href="/#/">Back to Home</a>
+  <navbar nav-title="'View Project'", links="container.links"></navbar>
   <project-details project="container.project"></project-details>
 </div>
