--- a/public/home/containers/home.html
+++ b/public/home/containers/home.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <navbar nav-title="'Projects'" links="container.links"></navbar>
+  <navbar nav-title="'Project Management App'" links="container.links"></navbar>
   <project-list projects="container.projects"></project-list>
   <project-form project="container.newProject" save="container.saveNewProject()"></project-form>
 </div>
