add project-edit screen

--- a/public/home/containers/home.html
+++ b/public/home/containers/home.html
@@ -1,5 +1,6 @@
 <div class="container">
   <navbar nav-title="'Project Management App'" links="container.links"></navbar>
   <project-list projects="container.projects"></project-list>
+  <h2>Add New Project</h2>
   <project-form project="container.newProject" save="container.saveNewProject()"></project-form>
 </div>
