--- a/public/projects/project-list/project-list.html
+++ b/public/projects/project-list/project-list.html
@@ -3,7 +3,7 @@
     <tr ng-repeat="project in ctrl.projects">
       <th style="text-align: center">{{project.name}}</th>
       <th style="text-align: center"><a href="/#/project/{{project.id}}">View</a></th>
-      <th style="text-align: center"><a href="/#/project/edit/{{project.id}}">Edit</a></th>
+      <th style="text-align: center"><a href="/#/project/{{project.id}}/edit">Edit</a></th>
     </tr>
   </table>
 </div>
